syntax = "proto3";

package users;

option java_multiple_files = true;
option java_package = "com.ecommerceapp.generated.users";


message GetUserByIdListRequest {
    repeated string id = 1;
}