syntax = "proto3";

package users;

import "services/users/users/response/user.response.proto";

option java_multiple_files = true;
option java_package = "com.ecommerceapp.generated.users";


message GetUserByIdListResponse {
    repeated UserResponse users = 1;
}